syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService";

package datalog;

service DataLog {
	rpc IsAlive (IsAliveRequest) returns (IsAliveReply);
	rpc Developers (google.protobuf.Empty) returns (DeveloperResponse);
	rpc SubmitReading (ReadingRequest) returns (SuccessResponse);
}

message IsAliveRequest {
	string name = 1;
}

message IsAliveReply {
	string message = 1;
}

message ReadingRequest {
	string metername = 1;
	double temperature = 2;
	double humidity = 3;
	double pressure = 4;
	google.protobuf.Timestamp timestamp = 5;
}

message SuccessResponse {
	bool IsSuccess = 1;
	string Message = 2;
}

message DeveloperResponse {
	repeated DeveloperName developers = 1;
}

message DeveloperName {
	string name = 1;
}